fix: fix header on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2723,12 +2723,6 @@ main .section-health .health-img-box .health-img.health-img--3 {
   #header nav .navbar-brand {
     width: 40%;
   }
-
-   main .section-health .health-img-box {
-    // display: none !important;
-    // padding: 40px;
-    margin-top: 40px;
-  }
   // main .services-section .flip .card .card-body.front .learn-more-btn {
   //   display: none !important;
   // }
@@ -2777,14 +2771,6 @@ main .section-health .health-img-box .health-img.health-img--3 {
     display: none;
   }
 
-  main .section-health .health-img-box .health-img {
-    width: 270px;
-  }
-
-  main .section-health .health-img-box .health-img.health-img--1 {
-    height: 166.73px;
-  }
-
   main .appointment-form-section .cta-group {
     margin-bottom: 40px;
   }
@@ -2822,51 +2808,6 @@ main .section-health .health-img-box .health-img.health-img--3 {
 
   main .find-a-doc-section {
     padding: 45px 0;
-  }
-
-  main .section-health .health-img-box {
-    //   position: relative;
-    min-height: 265px; // enough space for overlaps on small screens
-
-    //   .health-img {
-    //     position: absolute;
-    //     border-radius: 9px;
-    //     width: 80%; // responsive sizing
-    //     max-width: 300px;
-    //     height: auto;
-
-    //     &.health-img--1 {
-    //       z-index: 3;
-    //       transform: translate(0%, 50%);
-    //       margin-top: 42px;
-    //       &:hover {
-    //         z-index: 4;
-    //         transform: translate(0%, 50%);
-    //       }
-    //     }
-
-    //     &.health-img--2 {
-    //       z-index: 1;
-    //       transform: translate(30%, 0%);
-    //       &:hover {
-    //         z-index: 4;
-    //         transform: translate(30%, 0%);
-    //       }
-    //     }
-
-    //     &.health-img--3 {
-    //       z-index: 2;
-    //       top: auto;
-    //       bottom: 0;
-    //       transform: translate(100%, 0%);
-    //       margin-top: -84px;
-    //       margin-left: -84px;
-    //       &:hover {
-    //         z-index: 4;
-    //         transform: translate(100%, 0%);
-    //       }
-    //     }
-    //   }
   }
 
   main .section-health p {
@@ -3161,14 +3102,6 @@ main .section-health .health-img-box .health-img.health-img--3 {
     font-size: 13px;
   }
 
-  main .section-health .health-img-box .health-img {
-    width: 260px;
-  }
-
-  main .section-health .health-img-box .health-img.health-img--1 {
-    height: 160.55px;
-  }
-
   main .section-testimonial .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
     width: 30px;
     height: 30px;
@@ -3184,12 +3117,6 @@ main .section-health .health-img-box .health-img.health-img--3 {
 
   main .services-section .flip .card .card-body.back .service-box-info {
     padding: 10px 20px;
-  }
-
-  main .section-health .health-img-box {
-    // display: none !important;
-    // padding: 40px;
-    margin-top: 40px;
   }
 
   // main .section-health .heading-primary {
@@ -3208,47 +3135,9 @@ main .section-health .health-img-box .health-img.health-img--3 {
   #header nav .offcanvas .offcanvas-header .logo-link img {
     width: 50%;
   }
-
-  main .section-health .health-img-box .health-img {
-    width: 250px;
-  }
-
-  main .section-health .health-img-box {
-    min-height: 205px;
-  }
-
-  main .section-health .health-img-box .health-img.health-img--1 {
-    height: 154.38px;
-  }
 }
 
-@media (max-width: 425.98px) {
-  main .section-health .health-img-box .health-img {
-    width: 230px;
-  }
-
-  main .section-health .health-img-box {
-    min-height: 200px;
-  }
-
-  main .section-health .health-img-box .health-img.health-img--1 {
-    height: 142.03px;
-  }
-}
-
-@media (max-width: 375.98px) {
-  main .section-health .health-img-box .health-img {
-    width: 185px;
-  }
-
-  main .section-health .health-img-box {
-    min-height: 170px;
-  }
-
-  main .section-health .health-img-box .health-img.health-img--1 {
-    height: 114.23px;
-  }
-
+@media (max-width: 374.98px) {
   #up-arrow {
     right: 10px;
     height: 50px;
@@ -3256,13 +3145,58 @@ main .section-health .health-img-box .health-img.health-img--3 {
 }
 
 // Large Phones
-@media (min-width: 425px) and (max-width: 767.98px) {}
+@media (max-width: 767.98px) {
+  main .section-health .health-img-box {
+    min-height: 110px;
+  }
+
+  main .section-health .health-img-box .health-img {
+    width: 200px;
+  }
+
+  main .section-health .health-img-box .health-img.health-img--1{
+    height: 123.5px;
+    z-index: 2;
+  }
+
+  main .section-health .health-img-box .health-img.health-img--2{
+    z-index: 3;
+  }
+
+  main .section-health .health-img-box .health-img.health-img--3{
+    z-index: 1;
+  }
+}
+@media (max-width: 519.98px) {
+  main .section-health .health-img-box {
+    min-height: 90px;
+  }
+
+  main .section-health .health-img-box .health-img {
+    width: 170px;
+  }
+
+  main .section-health .health-img-box .health-img.health-img--1{
+    height: 105px;
+  }
+}
 
 // Standard phones
-@media (min-width: 375px) and (max-width: 424.98px) {
+@media (max-width: 424.98px) {
   #header nav.navbar-light .navbar-toggler {
     width: 40px;
     height: 40px;
+  }
+  main .section-health .health-img-box {
+    min-height: 70px;
+  }
+
+  main .section-health .health-img-box .health-img {
+    width: 150px;
+  }
+
+  main .section-health .health-img-box .health-img.health-img--1{
+    height: 93px;
   }
 }
 
@@ -3271,6 +3205,17 @@ main .section-health .health-img-box .health-img.health-img--3 {
   #header nav.navbar-light .navbar-toggler {
     width: 38px;
     height: 38px;
+  }
+  main .section-health .health-img-box {
+    min-height: 55px;
+  }
+
+  main .section-health .health-img-box .health-img {
+    width: 130px;
+  }
+
+  main .section-health .health-img-box .health-img.health-img--1{
+    height: 80px;
   }
 }
 
